--- a/src/main/resources/templates/selectChart.html
+++ b/src/main/resources/templates/selectChart.html
@@ -36,8 +36,11 @@
 	            <option value="0" selected>--- Seleccione una opción ---</option>
 	            <option value="1">Cantidad de hombres y mujeres por rango de tiempo</option>
 	            <option value="2">Cantidad de casos por tipo de caso</option>
+	            <option value="3">Cantidad de casos por rango de tiempo</option>
 	        </select>
 	        <br>
+	        
+	        
 	        <form th:action="@{/graficar/HombresMujeresRangoFechas}" method="get" id="HombresMujeresRango">
 	        	<label>Desde: </label>
                 <input type="text" id="datepicker" th:name="inicio">
@@ -50,9 +53,25 @@
                 <br>
 		        <input type="submit" value="Graficar" class="btn btn-primary">
 	        </form>
+	        
+	        
 	        <div id="cantidadPorCasos">
 	        	<a type="button" class="btn btn-primary" th:href="@{/graficar/CantidadPorCasos}">Graficar</a>
 	        </div>
+	        
+	        
+	        <form th:action="@{/graficar/CantidadPorCasosRango}" method="get" id="CantidadPorCasosRango">
+	        	<label>Desde: </label>
+                <input type="text" id="datepicker" th:name="inicio">
+                <br>
+                <label>Hasta: </label>
+                <input type="text" id="datepicker2" th:name="fin">
+                <br>
+                <div th:if="${alert}" th:text="${alert}"
+                    class="alert alert-danger" role="alert"></div>
+                <br>
+		        <input type="submit" value="Graficar" class="btn btn-primary">
+	        </form>
         
         </div>
     </div>
@@ -65,16 +84,24 @@
                     case "0":
                         $("#HombresMujeresRango").hide();
                         $("#cantidadPorCasos").hide();
+                        $("#CantidadPorCasosRango").hide();
                         break;
 
                     case "1":
                         $("#HombresMujeresRango").show();
                         $("#cantidadPorCasos").hide();
+                        $("#CantidadPorCasosRango").hide();
                         break;
 
                     case "2":
                         $("#HombresMujeresRango").hide();
                         $("#cantidadPorCasos").show();
+                        $("#CantidadPorCasosRango").hide();
+                        break;
+                    case "3":
+                        $("#HombresMujeresRango").hide();
+                        $("#cantidadPorCasos").hide();
+                        $("#CantidadPorCasosRango").show();
                         break;
                 }
             }).change();
