Manejo dinamico de titulo para graficos

--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -25,7 +25,7 @@
 <body>
 
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
+        <p style="display: none;" id="titulo" th:text="${titulo}"></p>
         <br>
         <!-- Sexos por rango de fechas -->
         <div th:if="${HombresMujeres}">
