--- a/src/main/resources/templates/busquedaP.html
+++ b/src/main/resources/templates/busquedaP.html
@@ -18,10 +18,12 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <h5 th:if="${mensaje}" class="alert alert-danger" th:text="${mensaje}"></h5>
