--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -17,21 +17,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/editar/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}" th:object="${peritaje}" method="GET">
+            <form th:action="@{/editar/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
+                th:object="${peritaje}" method="GET">
 
-				<input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
+                <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
 
                 <input type="hidden" id="id_peritaje" th:field="*{id_peritaje}">
-                
+
 
                 <label for="identificado">Persona identificada: </label>
                 <input type="checkbox" id="identificado" th:field="*{identificado}">
