--- a/src/main/resources/templates/ingresarEspecial.html
+++ b/src/main/resources/templates/ingresarEspecial.html
@@ -17,23 +17,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-        	<form th:if="${val} == 'Desaparecido'" th:action="@{/validarEspecialD/} + ${id}" th:object="${especial}" method="POST">
+            <form th:if="${val} == 'Desaparecido'" th:action="@{/validarEspecialD/} + ${id}" th:object="${especial}"
+                method="POST">
 
                 <th:block th:replace="components/form-especial :: especiales"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
-            <form th:if="${val} == 'Peritaje'" th:action="@{/validarEspecial/} + ${id}" th:object="${especial}" method="POST">
+            <form th:if="${val} == 'Peritaje'" th:action="@{/validarEspecial/} + ${id}" th:object="${especial}"
+                method="POST">
 
                 <th:block th:replace="components/form-especial :: especiales"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
