--- a/src/main/resources/templates/ingresarFoto.html
+++ b/src/main/resources/templates/ingresarFoto.html
@@ -17,33 +17,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-        	<form th:if="${val} == 'Desaparecido'" th:action="@{/subir/D/} + ${id}" th:object="${foto}" enctype="multipart/form-data" method="POST">
-				<br>
-                
+            <form th:if="${val} == 'Desaparecido'" th:action="@{/subir/D/} + ${id}" th:object="${foto}"
+                enctype="multipart/form-data" method="POST">
+                <br>
+
                 <th:block th:replace="components/form-foto :: foto"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
-            <form th:if="${val} == 'Peritaje'" th:action="@{/subir/P/} + ${id}" th:object="${foto}" enctype="multipart/form-data" method="POST">
-				<br>
-                
+            <form th:if="${val} == 'Peritaje'" th:action="@{/subir/P/} + ${id}" th:object="${foto}"
+                enctype="multipart/form-data" method="POST">
+                <br>
+
                 <th:block th:replace="components/form-foto :: foto"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
