--- a/src/main/resources/templates/selectChart.html
+++ b/src/main/resources/templates/selectChart.html
@@ -32,88 +32,96 @@
         <h1 th:text="${titulo}"></h1>
         <br>
         <div>
-        	<label>Buscar registro por: </label>
-	        <select id="selection" class="form-control">
-	            <option value="0" selected>--- Seleccione una opción ---</option>
-	            <option value="1">Cantidad de hombres y mujeres por rango de tiempo</option>
-	            <option value="2">Cantidad de casos por tipo de caso</option>
-	            <option value="3">Cantidad de casos por rango de tiempo</option>
-	            <option value="4">Cantidad de hombres y mujeres por tipo de caso</option>
-	            <option value="5">Cantidad de hombres y mujeres por tipo de caso (Rango de tiempo)</option>
-	        </select>
-	        <br>
-	        
-	        
-	        <form th:action="@{/graficar/HombresMujeresRangoFechas}" method="get" id="HombresMujeresRango">
-	        	<label>Desde: </label>
+            <label>Buscar registro por: </label>
+            <select id="selection" class="form-control">
+                <option value="0" selected>--- Seleccione una opción ---</option>
+                <option value="1">Cantidad de hombres y mujeres por rango de tiempo</option>
+                <option value="2">Cantidad de casos por tipo de caso</option>
+                <option value="3">Cantidad de casos por rango de tiempo</option>
+                <option value="4">Cantidad de hombres y mujeres por tipo de caso</option>
+                <option value="5">Cantidad de hombres y mujeres por tipo de caso (Rango de tiempo)</option>
+                <option value="6">Cantidad de casos por sexo</option>
+            </select>
+            <br>
+
+
+            <form th:action="@{/graficar/HombresMujeresRangoFechas}" method="get" id="HombresMujeresRango">
+                <label>Desde: </label>
                 <input type="text" id="datepicker" th:name="inicio">
                 <br>
                 <label>Hasta: </label>
                 <input type="text" id="datepicker2" th:name="fin">
                 <br>
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
-		        <input type="submit" value="Graficar" class="btn btn-primary">
-	        </form>
-	        
-	        
-	        <div id="cantidadPorCasos">
-	        	<a type="button" class="btn btn-primary" th:href="@{/graficar/CantidadPorCasos}">Graficar</a>
-	        </div>
-	        
-	        
-	        <form th:action="@{/graficar/CantidadPorCasosRango}" method="get" id="CantidadPorCasosRango">
-	        	<label>Desde: </label>
+                <input type="submit" value="Graficar" class="btn btn-primary">
+            </form>
+
+
+            <div id="cantidadPorCasos">
+                <a type="button" class="btn btn-primary" th:href="@{/graficar/CantidadPorCasos}">Graficar</a>
+            </div>
+
+
+            <form th:action="@{/graficar/CantidadPorCasosRango}" method="get" id="CantidadPorCasosRango">
+                <label>Desde: </label>
                 <input type="text" id="datepicker" th:name="inicio">
                 <br>
                 <label>Hasta: </label>
                 <input type="text" id="datepicker2" th:name="fin">
                 <br>
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
-		        <input type="submit" value="Graficar" class="btn btn-primary">
-	        </form>
-	        
-	        <form th:action="@{/graficar/HombresMujeresPorCaso}" method="get" id="HombresMujeresPorCaso">
-	        	<label for="tipo_de_caso">Tipo de caso: </label>
-	            <select class="form-control" th:name="type">
-	            	<option th:value="col">Selecciona una opci&oacute;n</option>
-	                <option th:each="caso : ${listaCasos3}" th:value="${caso}" th:text="${caso}">
-	                </option>
-	            </select>
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <input type="submit" value="Graficar" class="btn btn-primary">
+            </form>
+
+            <form th:action="@{/graficar/HombresMujeresPorCaso}" method="get" id="HombresMujeresPorCaso">
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" th:name="type">
+                    <option th:value="col">Selecciona una opci&oacute;n</option>
+                    <option th:each="caso : ${listaCasos3}" th:value="${caso}" th:text="${caso}">
+                    </option>
+                </select>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
-		        <input type="submit" value="Graficar" class="btn btn-primary">
-	        </form>
-	        
-	        <form th:action="@{/graficar/HombresMujeresPorCasoYRango}" method="get" id="HombresMujeresPorCasoYRango">
-	        	<label>Desde: </label>
+                <input type="submit" value="Graficar" class="btn btn-primary">
+            </form>
+
+            <form th:action="@{/graficar/HombresMujeresPorCasoYRango}" method="get" id="HombresMujeresPorCasoYRango">
+                <label>Desde: </label>
                 <input type="text" id="datepicker" th:name="inicio">
                 <br>
                 <label>Hasta: </label>
                 <input type="text" id="datepicker2" th:name="fin">
                 <br>
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
-	        	<label for="tipo_de_caso">Tipo de caso: </label>
-	            <select class="form-control" th:name="type">
-	            	<option th:value="col">Selecciona una opci&oacute;n</option>
-	                <option th:each="caso : ${listaCasos3}" th:value="${caso}" th:text="${caso}">
-	                </option>
-	            </select>
-                <div th:if="${alert}" th:text="${alert}"
-                    class="alert alert-danger" role="alert"></div>
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" th:name="type">
+                    <option th:value="col">Selecciona una opci&oacute;n</option>
+                    <option th:each="caso : ${listaCasos3}" th:value="${caso}" th:text="${caso}">
+                    </option>
+                </select>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
                 <br>
-		        <input type="submit" value="Graficar" class="btn btn-primary">
-	        </form>
-        
+                <input type="submit" value="Graficar" class="btn btn-primary">
+            </form>
+
+            <form th:action="@{/graficar/CantidadPorCasosSexo}" method="get" id="CantidadPorCasosSexo">
+                <label>Sexo: </label>
+                <select class="form-control" th:name="sexo">
+                    <option th:value="col">Selecciona una opci&oacute;n</option>
+                    <option th:each="sexo : ${listaSexo}" th:value="${sexo}" th:text="${sexo}">
+                    </option>
+                </select>
+                <div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
+                <br>
+                <input type="submit" value="Graficar" class="btn btn-primary">
+            </form>
+
         </div>
     </div>
-    
+
     <script>
         $(function () {
             $("#selection").on('change', function () {
@@ -125,6 +133,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").hide();
                         break;
 
                     case "1":
@@ -133,6 +142,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").hide();
                         break;
 
                     case "2":
@@ -141,6 +151,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").hide();
                         break;
                     case "3":
                         $("#HombresMujeresRango").hide();
@@ -148,6 +159,7 @@
                         $("#CantidadPorCasosRango").show();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").hide();
                         break;
                     case "4":
                         $("#HombresMujeresRango").hide();
@@ -155,6 +167,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").show();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").hide();
                         break;
                     case "5":
                         $("#HombresMujeresRango").hide();
@@ -162,24 +175,33 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").show();
+                        $("#CantidadPorCasosSexo").hide();
+                        break;
+                    case "6":
+                        $("#HombresMujeresRango").hide();
+                        $("#cantidadPorCasos").hide();
+                        $("#CantidadPorCasosRango").hide();
+                        $("#HombresMujeresPorCaso").hide();
+                        $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexo").show();
                         break;
                 }
             }).change();
         });
-        
+
         $(function () {
             $('#datepicker').datepicker({
                 format: 'yyyy-mm-dd'
             });
         });
-        
+
         $(function () {
             $('#datepicker2').datepicker({
                 format: 'yyyy-mm-dd'
             });
         });
     </script>
-	
+
 </body>
 
 </html>
