--- a/src/main/resources/templates/selectChart.html
+++ b/src/main/resources/templates/selectChart.html
@@ -40,6 +40,7 @@
 	            <option value="3">Cantidad de casos por rango de tiempo</option>
 	            <option value="4">Cantidad de hombres y mujeres por tipo de caso</option>
 	            <option value="5">Cantidad de hombres y mujeres por tipo de caso (Rango de tiempo)</option>
+	            <option value="6">Cantidad de casos por Sexo y rango de tiempo</option>
 	        </select>
 	        <br>
 	        
@@ -110,6 +111,28 @@
                 <br>
 		        <input type="submit" value="Graficar" class="btn btn-primary">
 	        </form>
+	       
+	        
+	        <form th:action="@{/graficar/CantidadPorCasosSexoRango}" method="get" id="CantidadPorCasosSexoRango">
+	        	<label>Sexo: </label>
+	        	<select class="form-control" th:name="sexo">
+	            	<option th:value="col">Selecciona una opci&oacute;n</option>
+	                <option th:each="sexo : ${listaSexo}" th:value="${sexo}" th:text="${sexo}">
+	                </option>
+	            </select>
+
+	            <br>
+	        	<label>Desde: </label>
+                <input type="text" id="datepicker3" th:name="inicio">
+                <br>
+                <label>Hasta: </label>
+                <input type="text" id="datepicker4" th:name="fin">
+                <br>
+                <div th:if="${alert}" th:text="${alert}"
+                    class="alert alert-danger" role="alert"></div>
+                <br>
+		        <input type="submit" value="Graficar" class="btn btn-primary">
+	        </form>
         
         </div>
     </div>
@@ -125,6 +148,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").hide();
                         break;
 
                     case "1":
@@ -133,6 +157,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").hide();
                         break;
 
                     case "2":
@@ -141,6 +166,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").hide();
                         break;
                     case "3":
                         $("#HombresMujeresRango").hide();
@@ -148,6 +174,7 @@
                         $("#CantidadPorCasosRango").show();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").hide();
                         break;
                     case "4":
                         $("#HombresMujeresRango").hide();
@@ -155,6 +182,7 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").show();
                         $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").hide();
                         break;
                     case "5":
                         $("#HombresMujeresRango").hide();
@@ -162,6 +190,15 @@
                         $("#CantidadPorCasosRango").hide();
                         $("#HombresMujeresPorCaso").hide();
                         $("#HombresMujeresPorCasoYRango").show();
+                        $("#CantidadPorCasosSexoRango").hide();
+                        break;
+                    case "6":
+                        $("#HombresMujeresRango").hide();
+                        $("#cantidadPorCasos").hide();
+                        $("#CantidadPorCasosRango").hide();
+                        $("#HombresMujeresPorCaso").hide();
+                        $("#HombresMujeresPorCasoYRango").hide();
+                        $("#CantidadPorCasosSexoRango").show();
                         break;
                 }
             }).change();
@@ -175,6 +212,18 @@
         
         $(function () {
             $('#datepicker2').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+        
+        $(function () {
+            $('#datepicker3').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+        
+        $(function () {
+            $('#datepicker4').datepicker({
                 format: 'yyyy-mm-dd'
             });
         });
