--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -42,14 +42,16 @@
                 <tr th:each=" desaPeri: ${desaPeriL}">
                     <th scope="row" th:text="${desaPeri.id_peritaje}"></th>
                     <td th:text="${desaPeri.tipo_de_caso}"></td>
-                    <td th:text="${desaPeri.nombre}"></td>
-                    <td th:text="${desaPeri.apellido}"></td>
+                    <td th:name="peritajeName" th:text="${desaPeri.nombre}"></td>
+                    <td th:name="peritajeLastname" th:text="${desaPeri.apellido}"></td>
                     <td th:text="${desaPeri.fecha_registro}"></td>
                     <td>
                         <div class="d-flex">
                             <form class="p-1"
                                 th:action="@{/verRegistro/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
                                 method="GET">
+                                <input th:name="peritajeName" type="hidden" th:value="${desaPeri.nombre}">
+                                <input th:name="peritajeLastname" type="hidden" th:value="${desaPeri.apellido}">
                                 <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-primary" value="Ver">
