Solucion falla de merge e implementacion de target a formulario

--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -92,7 +92,7 @@
                 <label for="fechaF">Fecha final: </label>
                 <input type="text" id="datepicker2" th:name="fechaF">
                 <br>
-                <a type="submit" value="Generar" target="_blank" th:href="@{/pdf/filtro}" class="btn btn-warning">Generar</a>
+                <input type="submit" value="Generar" class="btn btn-warning">
             </form>
 
             <!-- <meta charset="UTF-8">
