Filtros para busqueda de desaparecidos y peritajes agregados

--- a/src/main/resources/templates/busquedaD.html
+++ b/src/main/resources/templates/busquedaD.html
@@ -30,7 +30,7 @@
         <label>Buscar registro por: </label>
         <select id="selection" class="form-control">
             <option value="0" selected>--- Seleccione una opción ---</option>
-            <option value="1">Buscar por nombre</option>
+            <option value="1">Generar busqueda mediante filtro</option>
             <option value="2">Buscar por identificador</option>
         </select>
         <br>
@@ -39,6 +39,14 @@
             <label>Valor de b&uacute;squeda: </label>
             <input type="text" placeholder="Nombre" th:name="nombre_registro" class="form-control" required>
             <br>
+            <!--Sexo-->
+             <label>Sexo: </label>
+             <input type="radio" th:value="Ambos" th:name="sexo_registro" th:id="Ambos" checked>
+		     <label th:for="Ambos" th:text="Ambos"></label> 
+		    <div th:each="sexo : ${listaSexo}">
+		        <input type="radio" th:value="${sexo}" th:name="sexo_registro" th:id="${sexo}">
+		        <label th:for="${sexo}" th:text="${sexo}"></label> 
+		    </div>
             <button type="submit" id="btnNombre" name="action" value="buscarnombre" class="btn btn-primary"><i
                     class="fa fa-search"></i>Buscar</button>
         </form>
