--- a/bin/src/main/resources/templates/editarDesaparecido2.html
+++ b/bin/src/main/resources/templates/editarDesaparecido2.html
@@ -17,25 +17,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarEdicion/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}" th:object="${desaPeri}" method="POST">
-                
-                <input th:name="id_desaperi" type="text" th:value=${id_desaperiParam}>
-				
+            <form th:action="@{/validarEdicion/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}"
+                th:object="${desaPeri}" method="POST">
+
+                <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
+                <input th:name="id_desaparecido" type="hidden" th:value=${id_desaparecidoParam}>
+
                 <input type="hidden" th:field="*{tipo_de_caso}">
                 <br>
                 <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="text" th:field="*{desaparecido.id_desaparecido}">
+                <input type="hidden" th:field="*{desaparecido.id_desaparecido}">
 
-                <input type="submit" th:name="id_desaparecido" value="Terminar edición" class="btn btn-primary">
+                <input type="submit" value="Terminar edición" class="btn btn-primary">
 
             </form>
         </div>
