--- a/bin/src/main/resources/templates/listaDesaparecidos.html
+++ b/bin/src/main/resources/templates/listaDesaparecidos.html
@@ -18,11 +18,12 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <br>
@@ -46,15 +47,27 @@
                     <td th:text="${desaPeri.fecha_registro}"></td>
                     <td>
                         <div class="d-flex">
-                            <form class="p-1" th:action="@{/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}" method="GET">
-                                <input th:name="id_desaparecido" type="text" th:value=${desaPeri.id_desaparecido}>
-                                <input th:name="id_desaperi" type="text" th:value=${desaPeri.id_desaperi}>
+                            <form class="p-1"
+                                th:action="@{/verRegistroD/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                method="GET">
+                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                <input type="submit" class="btn btn-primary" value="Ver">
+                            </form>
+                            <form class="p-1"
+                                th:action="@{/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                method="GET">
+                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-success" value="Editar">
                             </form>
-                            <form class="p-1" action="" method="GET">
-                                <input th:name="id_desaparecido" type="text" th:value=${desaPeri.id_desaparecido}>
-                                <input th:name="id_desaperi" type="text" th:value=${desaPeri.id_desaperi}>
-                                <button type="button" class="btn btn-danger">Eliminar</button>
+                            <form class="p-1"
+                                th:action="@{/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                method="GET">
+                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                <input type="submit" class="btn btn-danger" value="Eliminar"
+                                    onclick="return confirm('¿Estás seguro que deseas eliminar el resgitro del desaparecido?');">
                             </form>
                         </div>
                     </td>
