--- a/bin/src/main/resources/templates/listaRegistros.html
+++ b/bin/src/main/resources/templates/listaRegistros.html
@@ -18,15 +18,85 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <br>
-        <table class="table">
+        <div>
+            <label>Buscar registro por: </label>
+            <select id="selection" class="form-control">
+                <option value="0" selected>--- Seleccione una opción ---</option>
+                <option value="1">Generar busqueda mediante filtro</option>
+                <option value="2">Generar PDF en base a filtro</option>
+            </select>
+            <br>
+            <form th:action="@{/listaRegistros}" method="get" id="filtrar">
+                <label for="filtro">Nombre o apellido: </label>
+                <input type="text" id="filtro" name="keyword">
+                <br>
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" id="casoSelect" name="type">
+                    <option th:each="caso : ${listaCasos2}" th:id="${tipo_de_caso}" th:value="${caso}"
+                        th:text="${caso}">
+                    </option>
+                </select>
+                <br>
+                <label>Sexo: </label>
+                <input type="radio" th:value="Ambos" name="sexo" th:id="Ambos" checked>
+                <label th:for="Ambos" th:text="Ambos"></label>
+                <div th:each="sexo : ${listaSexo}">
+                    <input type="radio" th:value="${sexo}" name="sexo" th:id="${sexo}">
+                    <label th:for="${sexo}" th:text="${sexo}"></label>
+                </div>
+                <br>
+                <label>Buscar entre fechas: </label>
+                <br>
+                <label for="fechaI">Fecha de inicial: </label>
+                <input type="text" id="datepicker" th:name="fechaI">
+
+                <label for="fechaF">Fecha final: </label>
+                <input type="text" id="datepicker2" th:name="fechaF">
+                <br>
+                <input type="submit" value="Buscar" class="btn btn-primary">
+            </form>
+
+            <form th:action="@{/pdf/filtro}" method="get" id="generarpdf">
+                <label for="filtro">Nombre o apellido: </label>
+                <input type="text" id="filtro" name="keyword">
+                <br>
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" id="casoSelect" name="type">
+                    <option th:each="caso : ${listaCasos2}" th:id="${tipo_de_caso}" th:value="${caso}"
+                        th:text="${caso}">
+                    </option>
+                </select>
+                <br>
+                <label>Sexo: </label>
+                <input type="radio" th:value="Ambos" name="sexo" th:id="Ambos" checked>
+                <label th:for="Ambos" th:text="Ambos"></label>
+                <div th:each="sexo : ${listaSexo}">
+                    <input type="radio" th:value="${sexo}" name="sexo" th:id="${sexo}">
+                    <label th:for="${sexo}" th:text="${sexo}"></label>
+                </div>
+                <br>
+                <label>Buscar entre fechas: </label>
+                <br>
+                <label for="fechaI">Fecha de inicial: </label>
+                <input type="text" id="datepicker3" th:name="fechaI">
+
+                <label for="fechaF">Fecha final: </label>
+                <input type="text" id="datepicker4" th:name="fechaF">
+                <br>
+                <input type="submit" value="Generar" class="btn btn-warning">
+            </form>
+        </div>
+        <br>
+        <table class="table" id="TablaRegistro">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
@@ -34,7 +104,6 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Apellido</th>
                     <th scope="col">Fecha Registro</th>
-                    <th scope="col">Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -44,20 +113,56 @@
                     <td th:text="${desaPeri.nombre}"></td>
                     <td th:text="${desaPeri.apellido}"></td>
                     <td th:text="${desaPeri.fecha_registro}"></td>
-                    <td>
-                        <div class="d-flex">
-                            <form class="p-1" action="" method="GET">
-                                <button type="button" class="btn btn-success">Editar</button>
-                            </form>
-                            <form class="p-1" action="" method="GET">
-                                <button type="button" class="btn btn-danger">Eliminar</button>
-                            </form>
-                        </div>
-                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
+
+    <script>
+        $(function () {
+            $("#selection").on('change', function () {
+                var valor = $(this).val();
+                switch (valor) {
+                    case "0":
+                        $("#filtrar").hide();
+                        $("#generarpdf").hide();
+                        break;
+
+                    case "1":
+                        $("#filtrar").show();
+                        $("#generarpdf").hide();
+                        break;
+
+                    case "2":
+                        $("#filtrar").hide();
+                        $("#generarpdf").show();
+                        break;
+                }
+            }).change();
+        });
+        $(function () {
+            $('#datepicker').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+
+        $(function () {
+            $('#datepicker2').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+        $(function () {
+            $('#datepicker3').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+
+        $(function () {
+            $('#datepicker4').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+    </script>
 
 </body>
 
