--- a/bin/src/main/resources/templates/verPeritaje.html
+++ b/bin/src/main/resources/templates/verPeritaje.html
@@ -17,12 +17,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}">
     <title th:text="'Ausys - Registro: '+ ${desaPeri.id_desaperi}"></title>
 </head>
 
 <body>
-
+    <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
         <h5 class="alert alert-success" th:text="${mensaje}"></h5>
 
@@ -30,7 +30,7 @@
             <div class="card-body">
                 <div>
                     <b class="d-inline">Identficador del registro: </b>
-                    <p class="d-inline" th:text="${desaPeri.id_desaperi}"></p>
+                    <p class="d-inline" th:text="${desaPeri.peritaje.id_peritaje}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Persona identificada: </b>
@@ -41,7 +41,7 @@
                     <p class="d-inline" th:text="${desaPeri.peritaje.edad_estimada}"></p>
                 </div>
                 <div>
-                    <b class="d-inline">Divici&oacute;n: </b>
+                    <b class="d-inline">Divisi&oacute;n: </b>
                     <p class="d-inline" th:text="${desaPeri.peritaje.division.id_division}"></p>
                 </div>
                 <div>
